# provenance

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-chart.yml  release.yml
app/: __init__.py  dependencies.py  main.py
app/core/: config.py  identifiers.py
app/detection_rules/: semgrep_rules.yml
app/models/: analytics.py  domain.py
app/provenance/: github_resolver.py
app/repositories/: redis_store.py
app/routers/: __init__.py  analysis.py  analytics.py  detectors.py  governance.py
app/schemas/: analysis.py  analytics.py  detectors.py  governance.py
app/services/: analysis.py  analytics.py  detection.py  governance.py  sarif.py
app/telemetry/: __init__.py  event_sink.py  metrics.py
charts/: README.md
charts/provenance/: Chart.yaml  README.md  values.yaml
charts/provenance/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  redis.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/provenance/templates/tests/: test-connection.yaml
clients/: README.md
clients/github-action/: action.yml  run.py
clients/python/: __init__.py  async_client.py  client.py
dashboards/: agent_dashboard.py
docs/: README.md  api-cookbook.md  ci-integration.md  configuration.md  deployment-guide.md  detector-authoring.md  dsse-decision-bundles.md  governance-and-risk-model.md  release-process.md  sarif.md
infrastructure/clickhouse/: schema.sql
scripts/: README.md  generate_openapi.py
tests/: test_analysis_attestation.py  test_analytics.py  test_api_endpoints.py  test_client_stub.py  test_detection.py  test_detectors_endpoint.py  test_event_sink.py  test_event_sink_snowflake.py  test_event_sinks_config.py  test_governance.py  test_openapi_generation.py
tests/property/: test_analytics_properties.py
tests/provenance/: test_github_resolver.py
