[project]
name = "provenance"
version = "0.1.0"
description = "Provenance & Risk Analytics service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dateutil>=2.9,<3.0",
    "redis>=5.0,<6.0",
    "semgrep>=1.64,<2.0",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<0.28"
]

[build-system]
requires = ["hatchling>=1.21,<2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml", "README.md"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<0.28",
    "fakeredis>=2.21,<3.0",
    "hypothesis>=6.98,<7.0"
]
dashboard = [
    "streamlit>=1.36,<2.0",
    "pandas>=2.2,<3.0",
    "httpx>=0.27,<0.28"
]
warehouse = [
    "snowflake-connector-python>=3.10,<4.0",
    "google-cloud-bigquery>=3.16,<4.0"
]
